    and others types as IP and ARP packets. Type filter removed now.
    New filter rule is: (ether dst mac) or (ether broadcast) 

  Console and daemons:
  * pcap-bridge: Fix suspend problems. Reconnect after loosing adapter.
  * New network "ndis-bridge" works in kernel mode and is the faster
    alternative to pcap-bridge. (Ligong Liu)
  * Bug #2013501: Stop with error message on empty parameters.
  * Bug #2055697: Crashing SLiRP under heavy usage ktorrent. (Shai Vaingast)

  Kernel:
  * scsi: New device for images with partition tables and works async.
    Usage "scsi0=disk,file.img" or "scsi1=cdrom,file.iso" (Steve Shoecraft)
  * Added virtual pci device handling. "lspci" is working (Steve Shoecraft)
  * Add PG_co_host_mapped, save many OS switching times: speed up coLinux.
  * New: /proc/colinux/stats show counts of OS switches.
  * unionfs-2.2.4 added as module. (Marwan Al-Sabbagh)
  * Add sysenter / sysexit restoration support, for cpu with SEP feature.
  * Bug #2524658: GPF on raid5/6 md array by accessing MMX/XMM-registers.

  Debugging:
  * Enable host kernel debug via registry [HKLM\SOFTWARE\coLinux] "Debug"

  Updated libraries and tools:
  * mingw 3.14
  * w32api 3.11

* Version 0.7.3
  Bugfixes:
  * Check ELF header before accessing kernel vmlinux (fix exception).
  * Fix problems with memory hole from shared video cards and the
    error message "PFN to high".
  * Bugfix host freeze after "Using IPI Shortcut mode" and other randomly
    crashes at mounting the root file system with types ext2 or ext3.

  Daemon:
  * Add build date to exe file properties.
  * View build timestamp of ntkernel driver with --status-driver.
  * Bug #1861876: Random created MAC stored in Registry to have same on
    every start. [HKCU\Software\coLinux]
  * Bugfix: Image files >=4GB fails with size error on parameter "-v 3".
  * Workarround for unresponsive key inputs on Vista flooded nt-console.
    Linux driver will sleep now, if message queues have to many entries and